# sbs-image-scraper

./: .gitignore  Dockerfile  LICENSE  README.md  Taskfile.yml  pyproject.toml  setup.py
sbs_image_scraper/: __init__.py  __main__.py  get_image.py
tests/: test_sbs_image_scraper.py
